# bnbhack-trading-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
data/: sample_bnb_ohlcv.csv
docs/: BACKTEST_RESULTS_TRACK1.md  BATTLE_TEST_RESULTS.md  DEMO_SCRIPT.md  HACKATHON_RULES.md  RESEARCH_LOG.md  STRATEGY_DIRECTIONS.md  SUBMISSION_CHECKLIST.md  SUBMISSION_WRITEUP.md  backtest_results_track1.json
docs/hypotheses/: SUMMARY.md  bsc-whale-copy.md  cex_listing_announcement_pump.md  cmc-agent-hub.md  dex-ignition.md  funding-negative-squeeze.md  negative-news-veto.md  news-allocation-llm.md  r3_btc_breakout_altcatchup.md  r3_convex_sizing.md  r3_dex_cex_leadlag.md  r3_m3_moonshot_allocator.md  r3_wallet_leadlag_cake_aster.md  stablecoin_depeg_repeg.md  token_unlock_fade.md
docs/redteam/: adverse-scenario-stress.md  attack4_realistic_cost.md  concentration_fragility.md  core_sleeve_stress.md  dex_execution_slippage.md  regime_whipsaw.md
scripts/: fetch_flow.py  funding_regime.py  make_charts.py  r3_btc_breakout.py  redteam_concentration.py  research.py  research_dex_ignition.py  research_funding_ic.py  robustness.py  scan_dex_liquidity.py  test_funding.py  test_taker.py
scripts/deploy/: install_cron.sh  run_cycle.sh
tests/: test_agent.py  test_backtest.py  test_battle.py  test_cli.py  test_cmc.py  test_data_sources.py  test_execution.py  test_indicators.py  test_marketdata.py  test_news_veto.py  test_portfolio.py  test_register.py  test_research_loop.py  test_signals.py  test_skill_export.py  test_walkforward.py
(+34 files in other folders)
