[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bnbhack-autoresearch-agent"
version = "0.1.0"
description = "AutoResearch-style crypto strategy agent for BNB Hack: AI Trading Agent Edition"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bnbhack-agent = "bnbhack_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
